Add background audio support for continuous streaming
- Add UIBackgroundModes audio capability to Info.plist
- Configure audio session for background playback with hearing aid support
- Add background task management to keep app running when screen dims
- Enable audio mixing with other apps (like Zoom)
- Audio will now continue playing even when iPhone screen is off

--- a/ios-app/AudioReceiver/Info.plist
+++ b/ios-app/AudioReceiver/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs camera access to scan QR codes for connecting to your Mac audio server.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict/>
